# kiro-doorstation

./: .clangd  .gitignore  API_ENDPOINTS_TESTING.md  BUILD_FIXES.md  CALL_IMPROVEMENTS.md  CALL_TESTING_GUIDE.md  CHANGELOG.md  CMakeLists.txt  CRITICAL_RTP_TIMING_FIX.md  DTMF_DEBUG_LOGGING.md  DTMF_QUICK_START.md  DTMF_WORKING_GUIDE.md  DUPLICATE_KEY_FIX.md  FINAL_LOG_FIX.md  FINAL_STATUS_REPORT.md  FRITZBOX_DTMF_SETUP.md  FRITZBOX_END_BIT_WORKAROUND.md  INCOMING_CALL_FIX.md  LOGOUT_BUTTON_IMPLEMENTATION.md  MEMORY_CRASH_FIX.md  NTP_IMPLEMENTATION.md  OTA_SAFETY_WARNINGS_IMPLEMENTATION.md  OTA_UPLOAD_FIX.md  PAYLOAD_TYPE_114_FIX.md  RATE_LIMIT_RESET.md  README.md  RFC4733_TEST_GUIDE.md  RTP_RECEIVE_OPTIMIZATION.md  SEARCH_RELOCATION.md  SECURITY.md  SIP_CALL_IMPLEMENTATION.md  SIP_CONNECT_DISCONNECT_FIX.md  SIP_INFO_DTMF_TROUBLESHOOTING.md  SIP_SOCKET_BINDING_FIX.md  SIP_TARGET_DUAL_APARTMENT.md  STACK_OVERFLOW_FIX.md  TASK_Implement-LED-States.md  TESTING_CHECKLIST.md  TEST_CALL_FEATURE.md  TODAYS_WORK_SUMMARY.md  (+9 more)
.devcontainer/: devcontainer.json
.kiro/specs/: FEATURE_STATUS.md
archive/session_reports/: BUGFIXES.md  BUTTON_PRESS_LOGGING.md  CRASH_FIX_MEMORY_CORRUPTION.md  DYNAMIC_IP_FIX.md  IMPLEMENTATION_SUMMARY.md  LOG_DUPLICATE_FIX.md  NTP_ENHANCEMENTS.md  QUICK_START_NTP.md  SIP_AUTHENTICATION_TODO.md  SIP_CALL_COMPLETION_SUMMARY.md  SIP_CALL_TODO.md  SIP_DIGEST_AUTH_IMPLEMENTATION.md  SIP_STATUS_DISPLAY_UPDATE.md  TASK_COMPLETION_REPORT.md  TIMESTAMP_UINT64_FIX.md  WATCHDOG_ERROR_FIX.md  (+6 more)
components/core/: CMakeLists.txt  auth_manager.c  captive_portal.c  captive_setup.html  cert_manager.c  gpio_handler.c  hardware_status.c  hardware_test.c  led_handler.c  ota_handler.c  sip_auth.c  sip_client.c  sip_msg.c  sip_utils.c  wifi_manager.c
components/core/include/: dns_responder.h  gpio_handler.h  hardware_status.h  ntp_log.h  ota_handler.h  rtp_handler.h  sip_auth.h  sip_client.h  sip_msg.h  sip_utils.h  wifi_manager.h
components/web/: CMakeLists.txt  api_auth.c  api_cert.c  api_dtmf.c  api_email.c  api_hardware.c  api_network.c  api_ntp.c  api_ota.c  api_sip.c  api_system.c  api_wifi.c  documentation.html  index.html  setup.html  web_api.c  web_server.c  web_utils.c
components/web/include/: api_auth.h  api_cert.h  api_dtmf.h  api_email.h  api_hardware.h  api_network.h  api_ntp.h  api_ota.h  api_sip.h  api_system.h  api_wifi.h  web_api.h  web_utils.h
docs/: AUTO_REGISTRATION.md  BOOT_BUTTON_TESTING.md  DOORSTATION_SIP_REQUIREMENTS.md  DUAL_CORE_ARCHITECTURE.md  HARDWARE.md  ISR_SAFETY_AUDIT.md  MEMORY_OPTIMIZATION.md  NTP_TIME_SYNC.md  OTA_TROUBLESHOOTING.md  RFC3261_COMPLIANCE_ANALYSIS.md  SIP_CALL_TODO.md  SIP_IMPLEMENTATION_TASKS.md  SIP_LOGGING_AND_CONNECTION.md  SIP_LOGGING_ARCHITECTURE.md  SIP_SETUP.md  STABILITY_OPTIMIZATIONS.md  WATCHDOG_FIX.md  WEB_INTERFACE_PREVIEW.md
firmware/: CMakeCache.txt  app-flash_args  cmake_install.cmake  config.env  flash_args  flasher_args.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  project_description.json
main/: CMakeLists.txt  Kconfig  audio_handler.c  audio_handler.h  auth_manager.c  auth_manager.h  bootlog.c  bootlog.h  captive_portal.c  captive_portal.h  captive_setup.html  cert_manager.c  cert_manager.h  dns_responder.c  documentation.html  dtmf_decoder.c  dtmf_decoder.h  gpio_handler.c  gpio_handler.h  hardware_info.c  hardware_info.h  hardware_test.c  hardware_test.h  index.html  led_handler.c  led_handler.h  login.html  main.c  ntp_sync.c  ntp_sync.h  ota_handler.c  ota_handler.h  ota_safety_warnings.js  ota_upload_functions.js  rfc4733_test.c  rfc4733_test.h  rtp_handler.c  rtp_handler.h  setup.html  sip_client.c  (+7 more)
(+178 files in other folders)
